--- a/wp-content/themes/nationswell/scss/ie.scss
+++ b/wp-content/themes/nationswell/scss/ie.scss
@@ -1,4 +1,3 @@
-
 .browsehappy {
   background-color: #003046;
   display: block;
@@ -19,10 +18,4 @@
 
 .browsehappy a:hover {
   color: #95d6ef;
-}
-
-/* typography */
-a, img {
-  outline: 0;
-  border: 0;
 }
