--- a/wp-content/themes/nationswell/scss/partials/small-desktop/_nav.scss
+++ b/wp-content/themes/nationswell/scss/partials/small-desktop/_nav.scss
@@ -14,7 +14,7 @@
     margin-top: 1.3rem;
 
     .slogan {
-      margin-left: 2.2rem;
+      margin-left: 1.8rem;
       margin-top: -1rem;
       font-size: 1.2rem;
     }
