--- a/wp-content/themes/nationswell/scss/partials/small-desktop/_story.scss
+++ b/wp-content/themes/nationswell/scss/partials/small-desktop/_story.scss
@@ -385,6 +385,11 @@
   }
 }
 
-.fb-comments {
+.fb-comments-container {
+  display: block;
   margin-bottom: 7.2rem;
+}
+
+.fb-comments-container * {
+  width: 100% !important;
 }
